--- a/front/public/index.html
+++ b/front/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="{{.BasePath}}static/favicon.ico">
-    <title>Coroot</title>
+    <title>根因分析先锋</title>
     <link rel="stylesheet" href="{{.BasePath}}static/css/roboto.css">
     <link rel="stylesheet" href="{{.BasePath}}static/css/mdi.css">
     <script>
@@ -21,7 +21,7 @@
 </head>
 <body>
 <noscript>
-    <strong>We're sorry but Coroot doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    <strong>抱歉，根因分析无法在没有JavaScript的情况下正常工作。请启用JavaScript以继续。</strong>
 </noscript>
 <div id="app"></div>
 </body>
